software-center (2.1.2) UNRELEASED; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/viewswitcher.py:
    - only reselect a channel node when a model is available
      (LP: #578497)
  * fix "List view forgets selected row" regression (LP: #584969)
  * softwarecenter/view/availablepane.py:
    - fix broken searches
  
  [ Michael Vogt ]
  * merged  lp:~glatzor/software-center/glatzor to get improved
    aptdaemon API
  * test/test_aptd.py:
    - update tests to work with new defered magic API
  * debian/control:
    - update dependencies on aptdaemon
  * merged lp:~mmcg069/software-center/improve-appview-persistence
    (many thanks!)

 -- Gary Lasker <gary.lasker@canonical.com>  Wed, 26 May 2010 12:24:28 -0400

software-center (2.1.1) maverick; urgency=low

  * softwarecenter/view/channelpane.py:
    - Fix broken channel list views (LP: #583545)

 -- Gary Lasker <gary.lasker@canonical.com>  Fri, 21 May 2010 01:21:38 -0400

software-center (2.1.0) maverick; urgency=low

  [ Matthew McGowan ]
  * merged lp:~mmcg069/software-center/backforward-redraw-fix
  * make the overlaywithpixbuf cellrenderer inherit from a text
    cellrenderer, does away with the need to have 1px column in the
    appview for accessibility reasons.
    (lp:~mmcg069/software-center/overlay-w-pixbuf-tweak)
  * add nice animation to pathbar elements 
    (lp:~mmcg069/software-center/pathbar-scroll-inn)

  [ Olivier Tilloy ]
  * fix LP: #564785:
    "each row has a progress bar (which itself never contains any text)"
  * show download completion status (LP: #460888)
  * add "bottom border" effect (LP: #439621)
  * add "history" GUI that reads /var/log/apt/history.log
  * Re-claim used memory after updating an existing AppStore with a 
    new one (LP: #577540)
  * Fix the database update when run with a Turkish locale 
    (patch by M. Vefa Bicakci). LP: #581207
  * Make buttons activate on mouse up, fix other inconsistencies
    in list view button operation (LP: #514835)
