@@ -7,6 +7,13 @@ software-center (2.1.2) UNRELEASED; urgency=low
   * fix "List view forgets selected row" regression (LP: #584969)
   * softwarecenter/view/availablepane.py:
     - fix broken searches
+  * data/ui/SoftwareCenter.ui,
+    softwarecenter/app.py,
+    softwarecenter/view/availablepane.py,
+    softwarecenter/view/navhistory.py:
+    - bit of navhistory code housekeeping
+    - add navhistory back/forward actions and corresponding
+      menu items
   
   [ Michael Vogt ]
   * merged  lp:~glatzor/software-center/glatzor to get improved
@@ -18,7 +25,7 @@ software-center (2.1.2) UNRELEASED; urgency=low
   * merged lp:~mmcg069/software-center/improve-appview-persistence
     (many thanks!)
 
- -- Gary Lasker <gary.lasker@canonical.com>  Wed, 26 May 2010 12:24:28 -0400
+ -- Gary Lasker <gary.lasker@canonical.com>  Wed, 26 May 2010 16:05:24 -0400
 
 software-center (2.1.1) maverick; urgency=low
 
